Роутеры для ресторанов, рефакторинг
