# courier_service/src/users/routers.py
@@ -1,17 +1,19 @@
 from random import randrange
-from typing import List
+from typing import List, Optional
 
 from fastapi import APIRouter, Depends, HTTPException, Path, status
 from sqlalchemy.ext.asyncio import AsyncSession
 from src.database import get_db
+from src.delivery.crud import get_restaurant_by_id
+from src.delivery.models import Order
+from src.delivery.schemas import (BaseOrderPyd, ResponseUserCreateOrderPyd,
+                                  ShippingCostPyd)
 
-from .crud import (create_user, get_active_orders, get_restaurant_by_id,
-                   get_user, post_order)
+from .crud import create_order, create_user, get_active_orders, get_user
 from .dependencies import get_current_user
 from .models import User
-from .schemas import (BaseOrdersPyd, CreateTokenPyd, RequestCreateOrderPyd,
-                      RequestUserPyd, ResponseCreateOrderPyd, ResponseUserPyd,
-                      ShippingCostPyd, TokenPyd)
+from .schemas import (CreateTokenPyd, CreateUserPyd, ResponseTokenPyd,
+                      ResponseUserPyd, UserCreateOrderPyd)
 from .security import create_access_token
 
 user_router = APIRouter()
@@ -19,7 +21,7 @@ user_router = APIRouter()
 
 @user_router.post('/api/v1/users', response_model=ResponseUserPyd,
                   summary='Регистрация пользователя', tags=['Авторизация'])
-async def register_user(user: RequestUserPyd, db: AsyncSession = Depends(get_db)):
+async def register_user(user: CreateUserPyd, db: AsyncSession = Depends(get_db)):
     """Регистрация пользователя."""
 
     user_data = user.dict()
@@ -34,7 +36,7 @@ async def register_user(user: RequestUserPyd, db: AsyncSession = Depends(get_db)
     return await create_user(db=db, **user_data)
 
 
-@user_router.post('/api/v1/token', response_model=TokenPyd,
+@user_router.post('/api/v1/token', response_model=ResponseTokenPyd,
                   summary='Получение токена', tags=['Авторизация'])
 async def login_for_access_token(login_request: CreateTokenPyd, db: AsyncSession = Depends(get_db)):
     """Получение токена."""
@@ -52,7 +54,7 @@ async def login_for_access_token(login_request: CreateTokenPyd, db: AsyncSession
     return {'access_token': access_token, 'token_type': 'Bearer'}
 
 
-@user_router.get('/api/v1/orders', response_model=List[BaseOrdersPyd],
+@user_router.get('/api/v1/users/orders', response_model=List[BaseOrderPyd],
                  summary='Все заказы пользователя', tags=['Пользователи'])
 async def get_all_user_orders(current_user: User = Depends(get_current_user)):
     """Все заказы пользователя."""
@@ -77,28 +79,28 @@ async def shipping_cost(
     return {'shipping_cost': randrange(200, 500)}
 
 
-@user_router.post('/api/v1/orders', response_model=ResponseCreateOrderPyd,
+@user_router.post('/api/v1/users/orders', response_model=ResponseUserCreateOrderPyd,
                   summary='Сделать заказ из ресторана', tags=['Пользователи'])
-async def create_order(
-    order: RequestCreateOrderPyd,
+async def new_order(
+    order: UserCreateOrderPyd,
     current_user: User = Depends(get_current_user),
     db: AsyncSession = Depends(get_db),
 ):
     """Сделать заказ из ресторана."""
 
-    order_info = await post_order(db, current_user.id, order.restaurant_id)
+    order_info = await create_order(db, current_user.id, order.restaurant_id)
     shipping_cost_value = await shipping_cost(order.restaurant_id, current_user, db)
 
-    result = ResponseCreateOrderPyd.parse_obj({**order_info.__dict__, **shipping_cost_value})
+    result = ResponseUserCreateOrderPyd.parse_obj({**order_info.__dict__, **shipping_cost_value})
     return result
 
 
-@user_router.get('/api/v1/active_orders', response_model=List[BaseOrdersPyd],
-                 summary='Активные заказы', tags=['Пользователи'])
+@user_router.get('/api/v1/users/active_orders', response_model=List[BaseOrderPyd],
+                 summary='Активные заказы пользователя', tags=['Пользователи'])
 async def active_orders(
     current_user: User = Depends(get_current_user),
     db: AsyncSession = Depends(get_db)
-):
+) -> Optional[List[Order]]:
     """
     Информация об активных заказах пользователя. Статус заказа
     находится в состоянии «Поиск курьера» или «В пути».
